--- a/study/WebContent/css/main.css
+++ b/study/WebContent/css/main.css
@@ -1,9 +1,6 @@
 @charset "UTF-8";
 
-.container {width:90%; text-align: center;}
-#top-menu {width:100%;}
-#top-menu ul li {display:inline-block;  min-width:100px;  }
-#left-menu {float:left; min-width:150px;}
-#main{float:left; }
-.footer {clear: both; width: 100%; background-color: green;}
-.footer ul li {display: inline-block; min-width: 100px;}
+body {
+  min-height: 2000px;
+  padding-top: 70px;
+}
